# motion.arduino.ICM42670P

./: CMakeLists.txt
src/: ICM42670P.cpp  ICM42670P.h  inv_time.c
